<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="cn.woolsen.ourstu.ui.login.LoginActivity" />

        <variable
            name="viewModel"
            type="cn.woolsen.ourstu.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="cursive"
            android:text="Our Student"
            android:textColor="@color/white"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:onClick="@{() -> viewModel.back()}"
            android:src="@drawable/ic_arrow_left"
            android:tint="@color/white"
            android:visible="@{viewModel.state == LoginActivity.REGISTER}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="cursive"
                    android:text='@{viewModel.state == LoginActivity.LOGIN? "Login": "Register"}'
                    android:textSize="32sp"
                    tools:text="Login" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_login_account"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp"
                    app:expandedHintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:text="@={viewModel.account}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/hint_password"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/hint_register_email"
                    android:visible="@{viewModel.state == LoginActivity.REGISTER}"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visible="@{viewModel.state == LoginActivity.REGISTER}">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_register_code"
                        app:boxCornerRadiusBottomStart="24dp"
                        app:boxCornerRadiusTopEnd="24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:text="@={viewModel.code}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/send_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:gravity="end"
                        android:onClick="@{() -> viewModel.sendCode()}"
                        android:padding="8dp"
                        android:text="@string/send_code"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="280dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape_login"
                    android:onClick="@{() -> viewModel.loginOrRegister()}"
                    android:text='@{viewModel.state == LoginActivity.LOGIN ? "登  录" : "注  册"}'
                    tools:text="登  录" />

                <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:invisible="@{viewModel.state == LoginActivity.REGISTER}"
                android:onClick="@{() -> viewModel.goRegister()}"
                android:text="还没有账号？去注册" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>